Polished Copy Writing

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -80,9 +80,9 @@
                     <h3 class="aboutUs-mission-statement__header">Mission Statement</h3>
                     <p class="aboutUs-mission-statement__text">
                         Our mission is to give pets and their pet parents the best care they can possibly have. 
-                        We are here to make sure you are at piece of mind at all times knowing your fur babies are being taken care of. 
+                        We are here to give you the peace of mind knowing your fur babies are being taken care of with the utmost skill and attention. 
                         As avid pet parents and busy professionals, we get it. We know how stressful it is worrying about the well-being of your fur 
-                        babies when you're not able to take care of them. Here at Happy Tales we understand how much your pets mean to you, and we do our
+                        babies all day. Here at Happy Tales we understand how much your pets mean to you, and we do our
                         very best to alleviate any anxiety that you or your pets may have while you are away by maintaining your pets routine as best as possible in their own home.
                     </p>
                 </div>
@@ -96,12 +96,12 @@
             <div class="card-body">
               <h5 class="card-title">Our Story</h5>
               <p class="card-text">
-                  Owner Ashley Ferrell started Happy Tales Pet Care up in March of 2018 and since then we have been we have created a huge family of Happy Tale Pack members. 
-                  We are always adapting to our customer needs to provide the best care experience possible. 
+                  Before making this her full-time job, owner and operator Ashley Ferrell has spent years taking care of pets, both her own and other's. After realizing she had a passion 
+                  for animal care, she decided to make a career out of it!
                   <br>
                   <br>
-                  Before creating Happy Tales and working full time job, pet sitting has 
-                  always been a hobby for owner Ashley. So she created something she enjoyed doing to make a career out of if. At Happy Tales we love meeting and taking on new clients.
+                  Happy Tales Pet Care was founded in 2018, and since then we have greatly expanded our Happy Tales Pack. We love taking on new clients 
+                  and meeting new fur families!  If you are interested in seeing why our Pack has gotten so big, schedule a <a href="letsmeet.html">Meet & Greet</a> today and find out! 
                 </p>
             </div>
           </div>
@@ -113,8 +113,8 @@
                 <div class="col-md aboutUs-social__map-section">
                     <h3 class="aboutUs-social__map-title">Service Area</h3>
                     <p class="aboutUs-social__description">
-                        Service Areas are West Branch, Rose City and Saint Helen as long as it is 20 minutes of our location. Any services that are out of my range will be a .50 cents per 
-                        miles added on to the service. If you aren't sure if you are in our service range feel free to fill out the form and we will let you know for you. 
+                        Service Areas are West Branch, Rose City and Saint Helen as long as it is 20 minutes from our location. Any services that are out of range will be an additional .50 cents per 
+                        mile added on to the service. If you aren't sure if you are in our service range feel free to fill out the form and we will let you know! 
                     </p>
                     <div class="d-flex justify-content-center">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729511.5797693656!2d-84.80110645733522!3d44.419732795145535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8820f753dd309057%3A0xcab1dd7828e7fc6f!2sHappy+Tales+Pet+Care!5e0!3m2!1sen!2sus!4v1556474954205!5m2!1sen!2sus" 
