--- a/html/contact.html
+++ b/html/contact.html
@@ -84,7 +84,7 @@
         <div class="d-flex justify-content-center" style="margin-top: 60px;">
             <p class="contact-intro-subtext">
                 If you are interested in booking with us check out our <a href="letsmeet.html">Let's Meet</a> page and find out 
-                everything that is needed for a meet and greet before hand.
+                everything that is needed for a Meet & Greet before your pets join the Happy Tales Pack!
             </p>
         </div>
         <!-- END OF Intro Text -->
