--- a/html/letsmeet.html
+++ b/html/letsmeet.html
@@ -163,16 +163,17 @@
                     </div>
                     <div class="d-flex justify-content-center schedule-form__download-docs-column__text">
                         <p class="schedule-form__download-docs-column-p">
-                            The meet and greet will be with Ashley and you and your fur family. Usually they will last for 30 minutes. 
-                            I like to have some one on one time with your pets in order to make sure they are comfortable with me. Also just go though your daily routine with me. 
-                            Where there food, water, leashes, treats all that stuff is located. If your pet goes outside, I like to walk around the yard and yet let me know there 
-                            outside rules and what they like to do out there.
+                            The meet and greet will be with Ashley, you and your fur family. Usually the meeting will last for about 30 minutes. 
+                            We like to get some one-on-one time with your pets in order to make sure they are comfortable with us. Next, we will go through your pet's daily routine; 
+                            where their food is, their water, leashes and treats. If your pet goes outside, we like to walk around the yard and go over their outside rules and what 
+                            they like to do outside.
                         </p>
                     </div>
                     <div class="d-flex justify-content-center schedule-form__download-docs-column__text">
                         <p class="schedule-form__download-docs-column-p">
-                            If you are able to, we would like you to have these forms filled out and signed upon meet and greet. 
-                            If not I will bring an extra set to fill out there. That will cause the time of the meet and greet to be a little bit longer.
+                            If you are able to we would like you to have these forms filled out and signed before the Meet & Greet, 
+                            if not we will bring an extra set to fill out there. If you are unable to have the forms filled out 
+                            prior to the Meet & Greet, the meeting might run upwards of an hour.
                         </p>
                     </div>
                     <div class="d-flex justify-content-center schedule-form_download-docs-column__buttons">
@@ -185,9 +186,9 @@
                     </div>
                     <div class="d-flex justify-content-center schedule-form__download-docs-column__map-text">
                         <p class="schedule-form__download-docs-column__map-text-p">
-                            Service Areas are West Branch, Rose City and Saint Helen as long as it is 20 minutes of my location. 
-                            Any services that are out of my range will be an .50cents per miles added on to the service. 
-                            If you aren't sure if you are in our service range feel free to fill out the form and we will let you know for you. 
+                            Service Areas are West Branch, Rose City and Saint Helen as long as it is within 20 miles of my location. 
+                            Any services that are out of my range will be an addition .50 cents per mile added on to the service. 
+                            If you aren't sure if you are in our service range feel free to fill out the Meet & Greet form and we will let you know! 
                         </p>
                     </div>
                     <div class="row d-flex justify-content-center">
