--- a/html/servicesandrates.html
+++ b/html/servicesandrates.html
@@ -79,7 +79,7 @@
                 <p class="intro-text__quote-p">"If the kindest souls were gifted with the longest lives, dogs would outlive us all."<br> <span class="accent">Ricky Gervais</span></p>
             </div>
             <div class="intro-text__subtitle d-flex justify-content-center">
-                <p class="intro-text__subtitle-p">At Happy Tales we provide a wide range of customizable pet care services. If you don't see exactly what you are looking for or have any questions feel free to send us a message on the <a href="contact.html">Contact Us</a> page. If you would like to check out our cancelation policy go to our <a href="faq.html">F.A.Q.</a> page</p>
+                <p class="intro-text__subtitle-p">At Happy Tales we provide a wide range of customizable pet care services. If you don't see exactly what you are looking for or if you have any questions, feel free to send us a message on the <a href="contact.html">Contact Us</a> page. If you would like to check out our cancelation policy go to our <a href="faq.html">F.A.Q.</a> page</p>
             </div>
         </div>
         <!-- END OF Intro Text-->
@@ -107,9 +107,9 @@
             <div class="row">
                 <div class="col-md services-card__text">
                     <h3 class="services-card__text-title">Pet Sitting</h3>
-                    <p class="services-card__text-lead-p">Heading out on vacation? Travel stress-free knowing your fur baby is in loving, professional hands! With over 12 years of pet care experience in West Branch and caring for our own pets, we understand how hard it is to find a reliable pet sitter.</p>
+                    <p class="services-card__text-lead-p">Heading out on vacation? Travel stress-free knowing your fur baby is in loving, professional hands! With over 12 years of pet care experience, we understand how hard it is to find a reliable pet sitter.</p>
                     <br>
-                    <p>We create customized care plans that meet the needs of our client and their pet. We will come visit your precious cat or dog while you’re away and give them lots of love and attention. As well as, clean the litter box for your cat, walk your pup, water plants, pick up mail, adjust lights, feed and administer medication. Playtime, pets and lots of love included. We also send regular check-ins to let you know how things are going.</p>
+                    <p>We create customized care plans that meet the needs of our client and their pets. We will come visit your precious pets while you’re away and give them lots of love and attention. As well as, clean the litter box for your cat, walk your pup, water plants, pick up mail, adjust lights, feed and administer medication. Playtime, pets and lots of love included. We also send regular check-ins to let you know how things are going.</p>
                     <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drop-By Visit</p>
                     <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drop-By Visit</p>
                     <p class="services-card__rate three-level-rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Drop-By Visit</p>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="col-md services-card__text">
                     <h3 class="services-card__text-title">Other Critters</h3>
-                    <p class="services-card__text-lead-p" style="margin-top: 60px;">We have experience handling multiple different critters from pigs, rabbits, fish, bird, chickens, etc. If you aren't sure if we provide a service for your critter, feel free to send us a message in the Contact Us page. </p>
+                    <p class="services-card__text-lead-p" style="margin-top: 60px;">We have experience handling multiple different critters; everything from pigs, rabbits, fish, bird, chickens, etc. If you aren't sure if we provide a service for your critter, feel free to send us a message in the <a href="contact.html">Contact Us</a> page. </p>
                     <br>
                     <p class="services-card__rate" style="margin-top: 140px;"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drive-By Visit</p>
                     <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drive-By Visit</p>
