--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <img src="img/paw-slider.png" alt=""/>
                 </div>
                 <div class="hero-carousel__subtitle">
-                  <h3>Professional Pet Sitting, Dog Waking, and more in West Branch, Michigan</h3>
+                  <h3>Professional Pet Sitting, Dog Walking and more in West Branch, Michigan</h3>
                 </div>
               </div>
             </div>
@@ -87,7 +87,7 @@
                   <img src="img/paw-slider.png" alt=""/>
                 </div>
                 <div class="hero-carousel__subtitle">
-                  <h3>Professional Pet Sitting, Dog Waking, and more in West Branch, Michigan</h3>
+                  <h3>Professional Pet Sitting, Dog Walking and more in West Branch, Michigan</h3>
                 </div>
               </div>
             </div>
@@ -101,7 +101,7 @@
                   <img src="img/paw-slider.png" alt=""/>
                 </div>
                 <div class="hero-carousel__subtitle">
-                  <h3>Professional Pet Sitting, Dog Waking, and more in West Branch, Michigan</h3>
+                  <h3>Professional Pet Sitting, Dog Walking and more in West Branch, Michigan</h3>
                 </div>
               </div>
             </div>
@@ -114,8 +114,8 @@
 
         <!--Intro Paragraph-->
         <div class="intro-paragraph">
-          <p><span class="accent-letter">H</span>appy Tales Pet Care is devoted to giving your pets the best care they deserved while under our watch. 
-            Services tailored to your pets needs. We service most of the West Branch, Rose City and Saint Helen areas.
+          <p><span class="accent-letter">H</span>appy Tales Pet Care is devoted to giving your pets the absolute best care around, which is why
+            we offer fully customizable services. If you live around West Branch, Rose City or Saint Helen, give us a call today!
           </p> 
         </div>
         <!-- END OF Intro Paragraph-->
@@ -131,18 +131,17 @@
                 <img src="img/dog.png" alt="A cartoon image of a blue dog sitting on his hind legs."/>
               </div>
               <div class="d-flex justify-content-center in-home-care__text-title">
-                <h3>Experienced in-home care for your pets</h3>
+                <h3>Experienced, In-Home care for your pets</h3>
               </div>
               <div class="styled-br"></div>
               <div class="in-home-care__text-text">
                 <p>
-                  We are here to help you out, offering all the benefits of home security, and providing comprehensive care for your pets. 
-                  Rather you are looking for care for your dog that needs mid day walks or you are going on vacation and have to leave your cats at home. 
-                  Keep your pets happy and healthy.
+                  When you and your fur family join the Happy Tales Pack, life just gets easier.  Our In-Home visits provide care and attention to your pets while also providing a level of home security.  
+                  Whether your dog needs a walk while you're at work or your cats need food and attention while you're on your much-needed vacation, we are here to help keep your pets happy and healthy. 
                 </p>
                 <br>
                 <p>
-                  Even if you have a pet that you can't get traditionally boarded, feel comfortable leaving your family at home knowing they are going to be comfortable and well taken care of.
+                  Even if you have a pet that you can't get traditionally boarded, you can feel comfortable leaving your family at home knowing they are going to be loved and well taken care of.
                 </p>
               </div>
               <div class="d-flex justify-content-center in-home-care__button">
@@ -164,8 +163,7 @@
                 </div>
                 <h4 class="services__service-title">Dog Walking</h4> 
                 <p class="services__service-text">
-                  Whether you have a new puppy at home, work long hours or maybe you are unable to get them out. 
-                  One things for sure is that your  dogs could use a walk around your neighborhood.
+                  Whether you have a new puppy, you work long hours, or you just aren't able to get your fur family exercise, we can help!
                 </p>
                 <div class="d-flex justify-content-center services__button">
                   <a href="html/servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
@@ -177,9 +175,7 @@
                 </div>
                 <h4 class="services__service-title">Pet Sitting</h4> 
                 <p class="services__service-text">
-                  We make sure they get the comfort, attention, 
-                  and TLC they need in their own home. We try to keep their daily routine and schedule 
-                  as close to the same as possible.
+                  All the TLC of a boarder, from the comfort of your home! Your pets will thank you for this worry free stay-cation!
                 </p>
                 <div class="d-flex justify-content-center services__button">
                   <a href="html/servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
@@ -191,9 +187,7 @@
                 </div>
                 <h4 class="services__service-title">Other Critters</h4> 
                 <p class="services__service-text">
-                  We love our other critters too!
-                  If you have a pet that you aren't sure if we service, feel free to get ahold of us. 
-                  Feel free to give us a call and see if we are able to service your friend.
+                  Cats, skunks, pigs, birds, dogs, llamas, horses, bunnies, rocks... if they're your pet, we'll take care of them! 
                 </p>
                 <div class="d-flex justify-content-center services__button">
                   <a href="html/servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
@@ -211,13 +205,15 @@
               <h3 class="parallax__text-title">Schedule Your Meet And Greet</h3>
               <div class="styled-br"></div>
               <p>
-                We like to Set up your meet and greet with Happy Tales and we will. Schedule a meet and greet with 
-                or sitter and see first hand how dedicated we are to keeping your pets lifestyle the same or possibly 
-                improving it if needed. Pets strive on routine and our goal is to keep their schedule as close to the 
-                same as possible in order to keep them at their happiest. If you aren't sure how your pet will take 
-                to our sitter, don't worry the meet and greet is complementary for all of us to decide if we will be 
-                a good fit for each other.
+                We can't wait to welcome your fur family to the Happy Tales Pack! Schedule a Meet & Greet with 
+                our sitter and see first hand how dedicated we are to improving your pet's lifestyle. Pets thrive 
+                on routine, so our goal is to develop a consistent schedule that your pet can follow whether we are 
+                on-site or not. If you aren't sure how your pet will take to our sitter, our complimentary Meet & Greet
+                is designed for all of us to decide if we will be a good fit for each other.
               </p>
+              <div class="d-flex justify-content-center parallax__button">
+                <a href="html/letsmeet.html" class="bttn-float bttn-lg bttn-jumbo">Set Up A Meet & Greet!</a>
+              </div>
             </div>
           </div>
         </div>
@@ -234,9 +230,8 @@
               <h3>Text and Picture Updates</h3>
               <div class="styled-br"></div>
               <p>
-                Receive daily text and picture updates of your pets. After your sitter completes each visit, 
-                they will send via text or email a detailed summary of what they did along with a photo. 
-                This way, you can be sure your family is being taken care of.
+                Receive daily text and picture updates of your pets! After each visit, your sitter will send a detailed summary
+                of the visit to you along with a picture of your pet. 
               </p>
             </div>
             <div class="col-md">
@@ -246,7 +241,8 @@
               <h3>Trusted and Friendly</h3>
               <div class="styled-br"></div>
               <p>
-                With being in service for multiple years we have the experience and knowledge to the care for your pets.
+                We have been doing this for years, and our clients can tell!  Head over to our <a href="html/aboutus.html/#testimonials">Testimonials</a>
+                to see what others are saying!
               </p>
             </div>
             <div class="col-md">
@@ -256,7 +252,8 @@
               <h3>In-Home Care</h3>
               <div class="styled-br"></div>
               <p>
-                We go to the pets home and care for them in the comfort of their own home.
+                It's been proven that in-home pet care is the most beneficial for your pets. Why take them to a boarding place when they can be taken care 
+                of from the comfort of their own home? 
               </p>
             </div>
           </div>
@@ -268,7 +265,8 @@
               <h3>Available 365 Days</h3>
               <div class="styled-br"></div>
               <p>
-                We work year round in order to give your pets the care they need.
+                We work year round to make sure your pets are fully taken care of, however we do book up quick! If you're interested in finding out about
+                the benefits of joining the Happy Tales Pack, <a href="html/contact.html">Contact Us</a> today!
               </p>
             </div>
             <div class="col-md">
@@ -278,7 +276,8 @@
               <h3>Happier, Healthier Pets</h3>
               <div class="styled-br"></div>
               <p>
-                With the reduced travel trauma and having them away from their homes, helps keep them happy and heathy.
+                Your pets will love everything about our time together!  From our human-grade treats to our insanely pet-centric services, your pets
+                will love everything about being a part of the Happy Tales Pack. 
               </p>
             </div>
             <div class="col-md">
@@ -288,7 +287,8 @@
               <h3>Reduced Travel Trauma</h3>
               <div class="styled-br"></div>
               <p>
-                Lots of pets don't do well, either traveling with you or traveling to the boarders. Help your pets from not having to deal with all of the downfalls traveling with your pets cause.
+                Travel trauma is a serious issue with pets, one nobody wants to deal with.  By providing first-class in-home care, we reduce any
+                travel trauma to zero.  
               </p>
             </div>
           </div>
